--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@ body {
   font-family: 'Poppins', sans-serif;
   width: 375px;
   margin: 100px auto;
-  
-  box-shadow: 0px 10px 20px #E9E9EA;
   border-radius: 5px;
+  border: 5px solid black;
+  transform: rotate(5deg);
 }
 /* Nav Bar */
 
@@ -46,11 +46,13 @@ nav {
 .img-section {
   max-width: 375px;
   margin: 0 auto;
+  
 }
 .img-container {
   width: 90%;
   margin: 0 auto;
   position: relative;
+
 }
 .dog-img{
   width: 100%;
@@ -76,22 +78,28 @@ nav {
   line-height: 32px;
   height: 20px;
 }
+.status-container {
+  max-width: 375px;
+  margin: 0 auto;
+  position: relative;
+  bottom: 500px;
+}
 .like-status{
   width: 150.91px;
   height: 70.16px;
-  position: absolute;
-  top: 35px;
-  left: 10px;
+  top: 50px;
+  left: 25px;
   transform: rotate(-30deg);
+  position: absolute;
   display: none;
 }
 .nope-status{
   width: 150.91px;
   height: 70.16px;
-  position: absolute;
-  top: 35px;
-  left: 10px;
+  top: 50px;
+  left: 25px;
   transform: rotate(-30deg);
+  position: absolute;
   display: none;
 }
 /* end of Img Section */
@@ -133,3 +141,10 @@ nav {
 }
 
 /* JavaScript Active Class */
+
+.status-active {
+  display: block !important;
+}
+.display-none {
+  display: none !important;
+}
